Amend styling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
   --purple: #4a2697;
   --teal: #4a8a97;
 
-  --s-radius: 1rem;
-  --header-footer-height: 10rem;
+  --large-radius: 1rem;
+  --common-radius: 0.2rem;
 }
 
 html {
@@ -25,13 +25,12 @@ h1, h2, h3 {
 }
 
 body {
-  min-height: 100%;
-
   padding: 2rem;
   margin: 0;
 
   background: linear-gradient(180deg, var(--purple) 0%, var(--teal) 100%);
   background-attachment: fixed;
+
   color: white;
   text-shadow:
    -1px -1px 0 #000,
@@ -42,17 +41,19 @@ body {
   flex-direction: column;
   align-items: baseline;
   justify-content: space-between;
+  transition: all;
+  height: 100%;
 }
 
-nav {
+body > * {
   width: 100%;
 }
-
 
 main {
   display: flex;
   flex-direction: row;
-  flex-grow: 1;
+  flex: 1;
+  overflow-x: scroll;
 }
 
 hr {
@@ -63,7 +64,7 @@ hr {
 }
 
 .visual-box {
-  border-radius: var(--s-radius);
+  border-radius: var(--large-radius);
   background: rgba(255, 255, 255, 0.1);
   padding: 1rem;
 }
@@ -87,13 +88,32 @@ hr {
   padding: var(--task-sizes);
   margin: var(--task-sizes) 0;
   text-shadow: none;
-  filter: drop-shadow(0 0 0.2rem var(--dark-purple));
+  filter: drop-shadow(0 0 var(--common-radius) var(--dark-purple));
 
   background: white;
   color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.single-field-form {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.single-field-form > label {
+  width: 100%;
+  flex: 1;
+}
+
+input {
+  width: 100%;
+  border-radius: var(--common-radius);
+  padding: var(--common-radius);
 }
 
 button {
@@ -108,7 +128,7 @@ button {
 }
 
 button:hover {
-  filter: drop-shadow(0 0 0.2rem white);
+  filter: drop-shadow(0 0 var(--common-radius) white);
 }
 
 button:focus {
@@ -117,15 +137,19 @@ button:focus {
 
 .button-text {
   height: 1rem;
-  margin: 0.2rem;
+  margin: var(--common-radius);
   border: 1px solid white;
-  border-radius: 0.2rem;
+  border-radius: var(--common-radius);
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  padding: 0.5rem;
 }
 
 .button {
   height: 1rem;
   width: 1rem;
-  margin: 0.2rem;
+  margin: var(--common-radius);
   border: 1px solid white;
 }
 
@@ -137,7 +161,7 @@ button:focus {
 }
 
 .button.light:hover {
-  filter: drop-shadow(0 0 0.2rem var(--dark-purple));
+  filter: drop-shadow(0 0 var(--common-radius) var(--dark-purple));
 }
 
 dialog {
